-- GrowthHub MVP database schema
-- Compatible con PostgreSQL y H2.
-- Las fechas y horas se almacenan en UTC.

CREATE TABLE campaigns (
    id CHAR(32) PRIMARY KEY,
    name TEXT NOT NULL,
    name_key TEXT NOT NULL UNIQUE,
    objective TEXT NOT NULL,
    budget DECIMAL(18, 2) NOT NULL,
    start_date DATE NOT NULL,
    end_date DATE NOT NULL,
    status VARCHAR(20) NOT NULL DEFAULT 'activa',
    is_demo BOOLEAN NOT NULL DEFAULT FALSE,
    archived_at TIMESTAMP,
    meta_account_id VARCHAR(100),
    meta_campaign_id VARCHAR(100),
    last_sync_attempt_at TIMESTAMP,
    last_sync_success_at TIMESTAMP,
    last_sync_error TEXT,
    CONSTRAINT ck_campaigns_name_not_blank CHECK (LENGTH(TRIM(name)) > 0),
    CONSTRAINT ck_campaigns_objective_not_blank CHECK (LENGTH(TRIM(objective)) > 0),
    CONSTRAINT ck_campaigns_budget_non_negative CHECK (budget >= 0),
    CONSTRAINT ck_campaigns_dates CHECK (end_date >= start_date),
    CONSTRAINT ck_campaigns_status CHECK (status IN ('activa', 'pausada', 'finalizada')),
    CONSTRAINT ck_campaigns_meta_pair CHECK (
        (meta_account_id IS NULL AND meta_campaign_id IS NULL)
        OR (meta_account_id IS NOT NULL AND meta_campaign_id IS NOT NULL)
    ),
    CONSTRAINT uq_campaigns_meta_pair UNIQUE (meta_account_id, meta_campaign_id)
);

CREATE TABLE channels (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name TEXT NOT NULL UNIQUE
);

CREATE TABLE campaign_channels (
    campaign_id CHAR(32) NOT NULL,
    channel_id BIGINT NOT NULL,
    position INTEGER NOT NULL,
    CONSTRAINT pk_campaign_channels PRIMARY KEY (campaign_id, channel_id),
    CONSTRAINT uq_campaign_channels_position UNIQUE (campaign_id, position),
    CONSTRAINT ck_campaign_channels_position CHECK (position >= 0),
    CONSTRAINT fk_campaign_channels_campaign
        FOREIGN KEY (campaign_id) REFERENCES campaigns (id)
        ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_campaign_channels_channel
        FOREIGN KEY (channel_id) REFERENCES channels (id)
        ON DELETE RESTRICT ON UPDATE RESTRICT
);

CREATE TABLE funnel_users (
    id TEXT PRIMARY KEY,
    is_demo BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE TABLE funnel_stages (
    key VARCHAR(20) PRIMARY KEY,
    label VARCHAR(30) NOT NULL,
    position SMALLINT NOT NULL UNIQUE,
    CONSTRAINT ck_funnel_stages_key CHECK (
        key IN ('visita', 'registro', 'activacion', 'interaccion', 'conversion', 'retencion')
    ),
    CONSTRAINT ck_funnel_stages_position CHECK (position BETWEEN 1 AND 6)
);

CREATE TABLE funnel_events (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id TEXT NOT NULL,
    stage VARCHAR(20) NOT NULL,
    channel_id BIGINT NOT NULL,
    campaign_id CHAR(32) NOT NULL,
    event_date DATE NOT NULL,
    CONSTRAINT fk_funnel_events_user
        FOREIGN KEY (user_id) REFERENCES funnel_users (id)
        ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_funnel_events_stage
        FOREIGN KEY (stage) REFERENCES funnel_stages (key)
        ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_funnel_events_channel
        FOREIGN KEY (channel_id) REFERENCES channels (id)
        ON DELETE RESTRICT ON UPDATE RESTRICT,
    CONSTRAINT fk_funnel_events_campaign
        FOREIGN KEY (campaign_id) REFERENCES campaigns (id)
        ON DELETE RESTRICT ON UPDATE RESTRICT
);

CREATE TABLE campaign_metrics (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    campaign_id CHAR(32) NOT NULL,
    captured_at TIMESTAMP NOT NULL,
    period_start DATE NOT NULL,
    period_end DATE NOT NULL,
    source VARCHAR(20) NOT NULL,
    reach BIGINT NOT NULL DEFAULT 0,
    impressions BIGINT NOT NULL DEFAULT 0,
    clicks BIGINT NOT NULL DEFAULT 0,
    conversions BIGINT NOT NULL DEFAULT 0,
    cost_per_result DECIMAL(18, 2) NOT NULL DEFAULT 0,
    CONSTRAINT uq_campaign_metrics_capture UNIQUE (campaign_id, captured_at),
    CONSTRAINT ck_campaign_metrics_period CHECK (period_end >= period_start),
    CONSTRAINT ck_campaign_metrics_source CHECK (source IN ('demo', 'manual', 'meta')),
    CONSTRAINT ck_campaign_metrics_reach CHECK (reach >= 0),
    CONSTRAINT ck_campaign_metrics_impressions CHECK (impressions >= 0),
    CONSTRAINT ck_campaign_metrics_clicks CHECK (clicks >= 0),
    CONSTRAINT ck_campaign_metrics_conversions CHECK (conversions >= 0),
    CONSTRAINT ck_campaign_metrics_cost CHECK (cost_per_result >= 0),
    CONSTRAINT fk_campaign_metrics_campaign
        FOREIGN KEY (campaign_id) REFERENCES campaigns (id)
        ON DELETE RESTRICT ON UPDATE RESTRICT
);

CREATE TABLE experiments (
    id CHAR(32) PRIMARY KEY,
    campaign_id CHAR(32) NOT NULL,
    name TEXT NOT NULL,
    hypothesis TEXT NOT NULL,
    target_metric VARCHAR(40) NOT NULL,
    result_type VARCHAR(20),
    status VARCHAR(20) NOT NULL DEFAULT 'borrador',
    started_at TIMESTAMP,
    ended_at TIMESTAMP,
    winner_code CHAR(1),
    conclusion TEXT,
    CONSTRAINT uq_experiments_id_winner UNIQUE (id, winner_code),
    CONSTRAINT ck_experiments_name_not_blank CHECK (LENGTH(TRIM(name)) > 0),
    CONSTRAINT ck_experiments_hypothesis_not_blank CHECK (LENGTH(TRIM(hypothesis)) > 0),
    CONSTRAINT ck_experiments_status CHECK (
        status IN ('borrador', 'activo', 'terminado', 'cancelado')
    ),
    CONSTRAINT ck_experiments_target_metric CHECK (
        target_metric IN ('conversion_rate', 'activation_rate', 'customer_conversion_rate', 'cost_per_result')
    ),
    CONSTRAINT ck_experiments_result_type CHECK (
        (target_metric = 'cost_per_result' AND result_type IS NOT NULL
            AND result_type IN ('click', 'registration', 'conversion'))
        OR (target_metric <> 'cost_per_result' AND result_type IS NULL)
    ),
    CONSTRAINT ck_experiments_started_at CHECK (
        status NOT IN ('activo', 'terminado') OR started_at IS NOT NULL
    ),
    CONSTRAINT ck_experiments_ended_at CHECK (
        (status IN ('terminado', 'cancelado') AND ended_at IS NOT NULL)
        OR (status IN ('borrador', 'activo') AND ended_at IS NULL)
    ),
    CONSTRAINT ck_experiments_date_order CHECK (
        ended_at IS NULL OR started_at IS NULL OR ended_at >= started_at
    ),
    CONSTRAINT ck_experiments_winner_code CHECK (winner_code IS NULL OR winner_code IN ('A', 'B')),
    CONSTRAINT ck_experiments_winner_status CHECK (
        winner_code IS NULL OR status = 'terminado'
    ),
    CONSTRAINT ck_experiments_conclusion CHECK (
        status <> 'terminado'
        OR (conclusion IS NOT NULL AND LENGTH(TRIM(conclusion)) > 0)
    ),
    CONSTRAINT fk_experiments_campaign
        FOREIGN KEY (campaign_id) REFERENCES campaigns (id)
        ON DELETE RESTRICT ON UPDATE RESTRICT
);

CREATE TABLE experiment_variants (
    experiment_id CHAR(32) NOT NULL,
    code CHAR(1) NOT NULL,
    description TEXT NOT NULL,
    visits BIGINT,
    registrations BIGINT,
    activations BIGINT,
    conversions BIGINT,
    clicks BIGINT,
    spend DECIMAL(18, 2),
    measured_at TIMESTAMP,
    CONSTRAINT pk_experiment_variants PRIMARY KEY (experiment_id, code),
    CONSTRAINT ck_experiment_variants_code CHECK (code IN ('A', 'B')),
    CONSTRAINT ck_experiment_variants_description CHECK (LENGTH(TRIM(description)) > 0),
    CONSTRAINT ck_experiment_variants_visits CHECK (visits IS NULL OR visits >= 0),
    CONSTRAINT ck_experiment_variants_registrations CHECK (registrations IS NULL OR registrations >= 0),
    CONSTRAINT ck_experiment_variants_activations CHECK (activations IS NULL OR activations >= 0),
    CONSTRAINT ck_experiment_variants_conversions CHECK (conversions IS NULL OR conversions >= 0),
    CONSTRAINT ck_experiment_variants_clicks CHECK (clicks IS NULL OR clicks >= 0),
    CONSTRAINT ck_experiment_variants_spend CHECK (spend IS NULL OR spend >= 0),
    CONSTRAINT ck_experiment_variants_registration_limit CHECK (
        registrations IS NULL OR visits IS NULL OR registrations <= visits
    ),
    CONSTRAINT ck_experiment_variants_activation_limit CHECK (
        activations IS NULL OR registrations IS NULL OR activations <= registrations
    ),
    CONSTRAINT ck_experiment_variants_conversion_limit CHECK (
        conversions IS NULL OR activations IS NULL OR conversions <= activations
    ),
    CONSTRAINT fk_experiment_variants_experiment
        FOREIGN KEY (experiment_id) REFERENCES experiments (id)
        ON DELETE RESTRICT ON UPDATE RESTRICT
);

ALTER TABLE experiments
    ADD CONSTRAINT fk_experiments_winner_variant
    FOREIGN KEY (id, winner_code) REFERENCES experiment_variants (experiment_id, code)
    ON DELETE RESTRICT ON UPDATE RESTRICT;

CREATE INDEX ix_funnel_events_user_date
    ON funnel_events (user_id, event_date);
CREATE INDEX ix_funnel_events_stage_user
    ON funnel_events (stage, user_id);
CREATE INDEX ix_funnel_events_channel_date
    ON funnel_events (channel_id, event_date);
CREATE INDEX ix_campaign_channels_channel
    ON campaign_channels (channel_id);
CREATE INDEX ix_funnel_events_campaign
    ON funnel_events (campaign_id);
CREATE INDEX ix_funnel_events_date
    ON funnel_events (event_date);

CREATE INDEX ix_experiments_campaign_status
    ON experiments (campaign_id, status);

INSERT INTO funnel_stages (key, label, position) VALUES
    ('visita', 'Visita', 1),
    ('registro', 'Registro', 2),
    ('activacion', 'Activación', 3),
    ('interaccion', 'Interacción', 4),
    ('conversion', 'Conversión', 5),
    ('retencion', 'Retención', 6);
